Fix navigation spacing

--- a/src/assets/js/components/header/header.css
+++ b/src/assets/js/components/header/header.css
@@ -63,10 +63,6 @@ header {
         [aria-hidden="true"] {
           display: none;
         }
-
-        span:last-of-type {
-          margin-left: -0.375ch;
-        }
       }
     }
 
@@ -249,7 +245,7 @@ header .theme-buttons button:focus-visible {
     & nav ul li:not(:last-of-type) a div::after {
       content: ",";
       display: inline-block;
-      margin-inline: -0.375ch 0.375ch;
+      margin-inline: -0.375ch 0;
     }
   }
 }
